plugins {
    id 'org.springframework.boot' version '2.3.4.RELEASE'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
}

group = 'com.freesoft.fx.trading'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'com.hazelcast:hazelcast:4.0'
    implementation 'com.hazelcast:hazelcast-spring:4.0'

    implementation 'com.freesoft.fx.trading:trader-cli-api:0.0.1'
    implementation 'com.freesoft.fx.trading:market-client-api:0.0.1'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
}

test {
    useJUnitPlatform()
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}